<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/EditorTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.videogameinventory.EditorActivity">

    <!-- Layout for the editor -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/text_game_title" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_title_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_title_name"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <!-- Genre category -->
        <LinearLayout
            android:id="@+id/container_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_genre" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Genre drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <!-- Inventory category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/editor_activity_added_inventory" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Inventory field -->
                <EditText
                    android:id="@+id/edit_current_inventory_number"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/editor_activity_added_inventory"
                    android:inputType="number" />
                <!-- Change hint below for new game inventory -->

            </LinearLayout>
        </LinearLayout>

        <!-- Price category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/editor_price_label" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Inventory field -->
                <EditText
                    android:id="@+id/edit_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/editor_hint_price"
                    android:inputType="number" />

            </LinearLayout>
        </LinearLayout>

        <!-- Game Image category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/editor_add_image" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Inventory field -->
                <Button
                    android:id="@+id/add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Add image" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
