<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.videogameinventory.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/details_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/video_game_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_no_photo" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp"
                    android:text=""
                    android:textSize="24sp"
                    tools:text="@string/editor_activity_title_new_game" />

                <TextView
                    android:id="@+id/genre_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:text=""
                    android:textSize="24sp"
                    tools:text="@string/category_genre" />

                <TextView
                    android:id="@+id/price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:text=""
                    android:textSize="24sp"
                    tools:text="@string/category_price" />

                <TextView
                    android:id="@+id/inventory_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:text=""
                    android:textSize="24sp"
                    tools:text="@string/editor_activity_added_inventory" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:layout_weight="2.06">

                    <Button
                        android:id="@+id/decrease_inventory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="3"
                        android:text="Sold Game" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/increase_inventory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:layout_marginRight="16dp"
                        android:layout_weight="3"
                        android:text="Add Game" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/order_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="@dimen/fab_margin"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:layout_marginTop="@dimen/fab_margin"
                        android:background="#FFFFFF"
                        android:contentDescription="Order from Vendor"
                        android:src="@drawable/email_icon" />

                </LinearLayout>

            </LinearLayout>

            <ImageButton
                android:id="@+id/delete_game"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_margin="8dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFF"
                android:src="@mipmap/ic_x" />


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>
